<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">
    <item
        android:id="@+id/menu_clear_all"
        android:title="@string/clear_all"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_hot"
                  android:title="@string/listing_hot"/>
            <item android:id="@+id/menu_new"
                  android:title="@string/listing_new"/>
            <item android:id="@+id/menu_rising"
                  android:title="@string/listing_rising"/>
            <item android:id="@+id/menu_top"
                  android:title="@string/listing_top"/>
            <item android:id="@+id/menu_controversial"
                  android:title="@string/listing_controversial"/>
        </menu>
    </item>
</menu>